better support for editing participant data

--- a/apollo/frontend/templates/frontend/macros/submission_field_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_field_macros.html
@@ -24,6 +24,10 @@
 {% elif field.type == 'SelectMultipleField' %}
 {{ render_checkbox_field(field, disabled) }}
 {% else %}
-{{ field(class_='form-control input-mini', disabled=disabled) }}
+{% if disabled %}
+{{ field(class_='form-control input-mini', disabled='disabled') }}
+{% else %}
+{{ field(class_='form-control input-mini') }}
+{% endif %}
 {% endif %}
 {%- endmacro -%}
