improved participants editing

--- a/apollo/frontend/templates/frontend/participant_edit.html
+++ b/apollo/frontend/templates/frontend/participant_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row">
 <div class="col-md-8 col-md-offset-2">
-{{ render_edit_form(form) }}
+{{ render_edit_form(form, participant) }}
 </div>
 </div>
 {% endblock %}
