--- a/apollo/frontend/templates/frontend/participant_edit_modal.html
+++ b/apollo/frontend/templates/frontend/participant_edit_modal.html
@@ -10,7 +10,13 @@
 <div class="form-group {% if field.errors %}has-error{% endif %}">
     {{ field.label(class_='col-sm-3 control-label') }}
     <div class="col-sm-7">
+        {% if field.name == 'supervisor' %}
+            {{ field(class_='form-control select2-container span3 select2 select2-observers-clear', **{'data-name': participant.supervisor.name, 'data-participant_id': participant.supervisor.participant_id}) }}
+        {% elif field.name == 'location' %}
+            {{ field(class_='form-control select2-container span3 select2 select2-locations', **{'data-name': participant.location.name, 'data-location_type': participant.location.location_type}) }}
+        {% else %}
         {{ field(class_='form-control span3') }}
+        {% endif %}
         {% if field.errors %}
         {% for e in field.errors %}
         <p class="help-block">{{ e }}</p>
