--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -15,7 +15,7 @@
 {% block content %}{% set form, siblings, master = submission.form, submission.siblings, submission.master %}
 {%- from 'frontend/macros/submission_field_macros.html' import render_submission_field %}
 <form method="POST">
-<input type="hidden" name="next" value="{{ request.environ.get('HTTP_REFERER', '') }}" />
+<input type="hidden" name="next" value="{{ request.environ.get('HTTP_REFERER', url_for('submissions.submission_list', form_id=form.pk)) }}" />
 <div>
 <table class="table table-bordered">
 {%- if form.form_type == 'CHECKLIST' -%}
@@ -249,7 +249,7 @@
         <button type="submit" class="btn btn-info btn-lg btn-block" style= "margin-left:1em;">Save</button>
       </div>
       <div class="col-md-2">
-        <a class="btn btn-default btn-lg btn-block" style= "margin-left:;" href="{{ url_for('submissions.submission_list', form_id=form.pk) }}">Cancel</a>
+        <a class="btn btn-default btn-lg btn-block" style= "margin-left:;" href="{{ request.environ.get('HTTP_REFERER', url_for('submissions.submission_list', form_id=form.pk)) }}">Cancel</a>
       </div>
     </div>
   </div>
