--- a/apollo/frontend/templates/frontend/event_selection.html
+++ b/apollo/frontend/templates/frontend/event_selection.html
@@ -1,11 +1,11 @@
 {%- extends 'frontend/_layout.html' -%}
 {% block content %}
 <div class="row-fluid">
-	<div class="col-md-2 col-md-offset-5 text-center" style="margin-top:5em">
+	<div class="col-md-4 col-md-offset-4 text-center" style="margin-top:5em; text-align:center;">
 		<legend>{{ page_title }}</legend>
 		<form class="form-vertical" action="" method="POST" accept-charset="utf-8">{{ form.csrf_token }}
 			<div class="form-group">
-          {{ form.event(class_='form-control') }}
+          {{ form.event(class_='form-control span3 center-block') }}
       </div>
       <button class="btn btn-warning btn-md" type="submit">{% trans %}Go{% endtrans %}</button>
 		</form>
