--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -16,7 +16,7 @@
 {%- from 'frontend/macros/submission_field_macros.html' import render_submission_field %}
 <form method="POST">
 <input type="hidden" name="next" value="{{ request.environ.get('HTTP_REFERER', url_for('submissions.submission_list', form_id=form.pk)) }}" />
-<div>
+<div class="table-responsive">
 <table class="table table-bordered">
 {%- if form.form_type == 'CHECKLIST' -%}
 <tr>
@@ -118,76 +118,78 @@
 {{ submission_form.csrf_token() }}
 {%- if form.form_type == 'CHECKLIST' %}
 {%- for f in sibling_forms -%}{{ f.csrf_token() }}{%- endfor -%}{{ master_form.csrf_token() }}
-<table class="table table-bordered table-striped table-hover">
-<tbody>
-  <tr>
-    <td colspan="2">&nbsp;</td>
-    <td style="text-align: center">
-    {%- if perms.edit_both_submissions.can() -%}
-    <label for="{{ submission.pk }}" style="margin-bottom: 0"><strong>OBS 1</strong><p style="margin-top: 0.25em"><input type="radio" id="{{ submission.pk }}" name="submission_selection" value="participant"></p></label>
-    {%- else -%}
-    <strong>OBS 1</strong>
-    {%- endif -%}
-    </td>
-    {%- for sibling in siblings -%}
-    <td style="text-align: center">
-    {%- if perms.edit_both_submissions.can() -%}
-    <label for="{{ sibling.pk }}" style="margin-bottom: 0"><strong>OBS {{ loop.index + 1 }}</strong><p style="margin-top: 0.25em"><input type="radio" id="{{ sibling.pk }}" name="submission_selection" value="" disabled></p></label>
-    {%- else -%}
-    <strong>OBS {{ loop.index + 1 }}</strong>
-    {%- endif -%}
-    </td>
-    {%- endfor -%}
-    <td style="text-align: center">
-    {%- if perms.edit_both_submissions.can() -%}
-    <label for="{{ submission.master.pk }}" style="margin-bottom: 0"><strong>PS</strong><p style="margin-top: 0.25em"><input type="radio" id="{{ submission.master.pk }}" name="submission_selection" value="master" /></p></label>
-    {%- else -%}
-    <strong>PS</strong>
-    {%- endif -%}
-    </td>
-    <td colspan="2" style="vertical-align: middle; padding-left: 1.5em"><abbr title="{% trans %}Confidence Level{% endtrans %}"><i class="glyphicon glyphicon-thumbs-up"></i></abbr></td>
-  </tr>
-  {% for group in form.groups %}
-  <tr>
-    <td colspan="{{ siblings|count + 6 }}"><h4>{{ group.name }}</h4></td>
-  </tr>
-  {% for field in group.fields %}
-  <tr>
-    <th>{{ field.name }}</th>
-    <td>{{ field.description }}
-      {%- if field.options and not field.allows_multiple_values %}
-      <span class="options">
-      {% for item in field.options|dictsort(false, 'value') %}
-      <span class="option"><strong>({{ item.1 }})</strong> {{ item.0 }}</span>
+<div class="table-responsive">
+  <table class="table table-bordered table-striped table-hover">
+    <tbody>
+      <tr>
+        <td colspan="2">&nbsp;</td>
+        <td style="text-align: center">
+        {%- if perms.edit_both_submissions.can() -%}
+        <label for="{{ submission.pk }}" style="margin-bottom: 0"><strong>OBS 1</strong><p style="margin-top: 0.25em"><input type="radio" id="{{ submission.pk }}" class="obs1" name="submission_selection" value="participant"></p></label>
+        {%- else -%}
+        <strong>OBS 1</strong>
+        {%- endif -%}
+        </td>
+        {%- for sibling in siblings -%}
+        <td style="text-align: center">
+        {%- if perms.edit_both_submissions.can() -%}
+        <label for="{{ sibling.pk }}" style="margin-bottom: 0"><strong>OBS {{ loop.index + 1 }}</strong><p style="margin-top: 0.25em"><input type="radio" id="{{ sibling.pk }}" name="submission_selection" value="" disabled></p></label>
+        {%- else -%}
+        <strong>OBS {{ loop.index + 1 }}</strong>
+        {%- endif -%}
+        </td>
+        {%- endfor -%}
+        <td style="text-align: center">
+        {%- if perms.edit_both_submissions.can() -%}
+        <label for="{{ submission.master.pk }}" style="margin-bottom: 0"><strong>PS</strong><p style="margin-top: 0.25em"><input type="radio" id="{{ submission.master.pk }}" class="ps" name="submission_selection" value="master" /></p></label>
+        {%- else -%}
+        <strong>PS</strong>
+        {%- endif -%}
+        </td>
+        <td colspan="2" style="vertical-align: middle; padding-left: 1.5em"><abbr title="{% trans %}Confidence Level{% endtrans %}"><i class="glyphicon glyphicon-thumbs-up"></i></abbr></td>
+      </tr>
+      {% for group in form.groups %}
+      <tr>
+        <td colspan="{{ siblings|count + 6 }}"><h4>{{ group.name }}</h4></td>
+      </tr>
+      {% for field in group.fields %}
+      <tr>
+        <th>{{ field.name }}</th>
+        <td>{{ field.description }}
+          {%- if field.options and not field.allows_multiple_values %}
+          <span class="options">
+          {% for item in field.options|dictsort(false, 'value') %}
+          <span class="option"><strong>({{ item.1 }})</strong> {{ item.0 }}</span>
+          {% endfor %}
+          </span>
+          {%- endif %}
+        </td>
+        {%- if readonly -%}
+        <td class="obs-on">{{ render_submission_field(submission_form[field.name], disabled=1)}}</td>
+        {%- else -%}
+        <td {%- if submission_form[field.name].errors %} class="danger"{%- endif -%}>{{ render_submission_field(submission_form[field.name]) }}</td>
+        {%- endif -%}
+        {%- for sibling_form in sibling_forms -%}
+        <td >{{ render_submission_field(sibling_form[field.name], disabled=1) }}</td>
+        {%- endfor -%}
+        {%- if readonly -%}
+        <td class="ps-on" {%- if master_form[field.name].errors %} class="danger"{%- endif -%}>{{ render_submission_field(master_form[field.name]) }}</td>
+        {%- else -%}
+        <td {%- if master_form[field.name].errors %} class="danger"{%- endif -%}>{{ render_submission_field(master_form[field.name], disabled=1) }}</td>
+        {%- endif -%}
+        {% if submission.master %}{% set score = submission.master.confidence.get(field.name, None) %}{% else %}{% set score = None %}{% endif -%}
+        {% if score == 0 %}{% set score_label = 'label-danger' -%}
+        {% elif score == 1 %}{% set score_label = 'label-success' -%}
+        {% elif not score %}{% set score_label = 'label-default' -%}
+        {% else %}{% set score_label = 'label-warning' %}{% endif -%}
+        <td style="padding-top:14px"><span class="label {{ score_label }}">{% if score == None %}-{% else %}{{ '%.3g' % score|percent_of(1, 0) }}%{% endif %}</span></td>
+        <th style="padding-top:14px"><span>{{ field.name }}</span></th>
+      </tr>
       {% endfor %}
-      </span>
-      {%- endif %}
-    </td>
-    {%- if readonly -%}
-    <td>{{ render_submission_field(submission_form[field.name], disabled=1)}}</td>
-    {%- else -%}
-    <td {%- if submission_form[field.name].errors %} class="danger"{%- endif -%}>{{ render_submission_field(submission_form[field.name]) }}</td>
-    {%- endif -%}
-    {%- for sibling_form in sibling_forms -%}
-    <td>{{ render_submission_field(sibling_form[field.name], disabled=1) }}</td>
-    {%- endfor -%}
-    {%- if readonly -%}
-    <td {%- if master_form[field.name].errors %} class="danger"{%- endif -%}>{{ render_submission_field(master_form[field.name]) }}</td>
-    {%- else -%}
-    <td {%- if master_form[field.name].errors %} class="danger"{%- endif -%}>{{ render_submission_field(master_form[field.name], disabled=1) }}</td>
-    {%- endif -%}
-    {% if submission.master %}{% set score = submission.master.confidence.get(field.name, None) %}{% else %}{% set score = None %}{% endif -%}
-    {% if score == 0 %}{% set score_label = 'label-danger' -%}
-    {% elif score == 1 %}{% set score_label = 'label-success' -%}
-    {% elif not score %}{% set score_label = 'label-default' -%}
-    {% else %}{% set score_label = 'label-warning' %}{% endif -%}
-    <td style="padding-top:14px"><span class="label {{ score_label }}">{% if score == None %}-{% else %}{{ '%.3g' % score|percent_of(1, 0) }}%{% endif %}</span></td>
-    <th style="padding-top:14px"><span>{{ field.name }}</span></th>
-  </tr>
-  {% endfor %}
-  {% endfor %}
-</tbody>
-</table>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% else %}
 <table class="table table-bordered table-striped table-hover">
   <tbody>
@@ -332,5 +334,19 @@
   $('input[name="submission_selection"]').change(function () {
     var prefix = $(this).attr('id');
   });
+  $('.obs1').click(function(){
+    var isDisabled = $('table tbody tr td.obs-on input').is(':disabled');
+    if (isDisabled) {
+        $('table tbody tr td.obs-on input').prop('disabled', false);
+        $('table tbody tr td.ps-on input').prop('disabled', true);
+    }
+  })
+  $('.ps').click(function(){
+    var isDisabled = $('table tbody tr td.ps-on input').is(':disabled');
+    if (isDisabled) {
+        $('table tbody tr td.ps-on input').prop('disabled', false);
+        $('table tbody tr td.obs-on input').prop('disabled', true);
+    }
+  })
 </script>
 {% endblock %}
