--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -60,6 +60,17 @@
             <li><a href="{{ current_menu.submenu('forms.incidents').dynamic_list[0].url }}"><i class="glyphicon glyphicon-check"></i> {{ current_menu.submenu('forms.incidents').dynamic_list[0].text }}</a></li>
             {%- endif -%}
             {%- if perms.view_analyses.can() -%}
+            {% if current_menu.submenu('qa.checklists').dynamic_list -%}
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-ok"></i> {% trans %}Quality Assurance{% endtrans %} <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    {% for form in current_menu.submenu('qa.checklists').dynamic_list -%}
+                    <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-ok"></i> {{ form.text }}</a></li>
+                    {%- endfor %}
+                </ul>
+            </li>
+            {%- endif -%}
+            {%- endif -%}
+            {%- if perms.view_analyses.can() -%}
             {%- if current_menu.submenu('forms.incidents').dynamic_list or current_menu.submenu('forms.checklists').dynamic_list -%}
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-stats"></i> {% trans %}Analyses{% endtrans %} <b class="caret"></b></a>
               <ul class="dropdown-menu">
