--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -70,7 +70,7 @@ right: auto;
     right: .1%;
 }
 .dropdown-menu > li:first-child a{background-color: #fff;cursor: text;}
-
+.table-responsive{overflow: auto;}
 #delete{
  margin-left:-23px;
  position:relative;
