--- a/apollo/frontend/static/css/custom.css
+++ b/apollo/frontend/static/css/custom.css
@@ -69,7 +69,8 @@ right: auto;
     margin-left: 10px;
     right: .1%;
 }
-.dropdown-menu > li:first-child a{background-color: #fff;cursor: text;}
+.eml a{cursor: text;}
+.eml:first-child a:hover{background-color: #fff;cursor: text;}
 .table-responsive{overflow: auto;}
 #delete{
  margin-left:-23px;
